[tool.poetry]
name = "emr-serverless-sql-cli"
version = "0.5.0"
description = ""
authors = ["Damon P. Cortesi <1512+dacort@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "emr_serverless_sql"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.57"
click = "^8.1.3"
nbconvert = "^7.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
emrss = "emr_serverless_sql.emrss_cli:run"